--- a/actions.html
+++ b/actions.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2022-08-28" />
+<meta name="date" content="2022-09-15" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -159,6 +159,7 @@
 <li class="chapter" data-level="10.4.1" data-path="pollution.html"><a href="pollution.html#overflows"><i class="fa fa-check"></i><b>10.4.1</b> Overflows</a></li>
 </ul></li>
 <li class="chapter" data-level="10.5" data-path="pollution.html"><a href="pollution.html#genetic-pollution"><i class="fa fa-check"></i><b>10.5</b> Genetic Pollution</a></li>
+<li class="chapter" data-level="10.6" data-path="pollution.html"><a href="pollution.html#light-pollution"><i class="fa fa-check"></i><b>10.6</b> Light Pollution</a></li>
 </ul></li>
 <li class="chapter" data-level="11" data-path="species.html"><a href="species.html"><i class="fa fa-check"></i><b>11</b> Species</a>
 <ul>
