--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-11-29" />
+<meta name="date" content="2023-12-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -270,6 +270,7 @@
 <li class="chapter" data-level="C.4" data-path="news.html"><a href="news.html#architecture-of-degrowth"><i class="fa fa-check"></i><b>C.4</b> 201231 Architecture of Degrowth</a></li>
 <li class="chapter" data-level="C.5" data-path="news.html"><a href="news.html#royal-insanity"><i class="fa fa-check"></i><b>C.5</b> 201230 Royal Insanity</a></li>
 </ul></li>
+<li class="chapter" data-level="D" data-path="sitelog.html"><a href="sitelog.html"><i class="fa fa-check"></i><b>D</b> Sitelog</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/dyrehaugen/renv" target="blank">On Github</a></li>
 
@@ -293,7 +294,7 @@
 <div id="header">
 <h1 class="title">Environment</h1>
 <p class="author"><em>Dyrehaugen Web Notebook</em></p>
-<p class="date"><em>2023-11-29</em></p>
+<p class="date"><em>2023-12-09</em></p>
 </div>
 <div id="environment" class="section level1 hasAnchor" number="1">
 <h1><span class="header-section-number">1</span> Environment<a href="index.html#environment" class="anchor-section" aria-label="Anchor link to header"></a></h1>
