--- a/news.html
+++ b/news.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-11-29" />
+<meta name="date" content="2023-12-09" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -31,7 +31,7 @@
   
   
 <link rel="prev" href="links.html"/>
-
+<link rel="next" href="sitelog.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
@@ -270,6 +270,7 @@
 <li class="chapter" data-level="C.4" data-path="news.html"><a href="news.html#architecture-of-degrowth"><i class="fa fa-check"></i><b>C.4</b> 201231 Architecture of Degrowth</a></li>
 <li class="chapter" data-level="C.5" data-path="news.html"><a href="news.html#royal-insanity"><i class="fa fa-check"></i><b>C.5</b> 201230 Royal Insanity</a></li>
 </ul></li>
+<li class="chapter" data-level="D" data-path="sitelog.html"><a href="sitelog.html"><i class="fa fa-check"></i><b>D</b> Sitelog</a></li>
 <li class="divider"></li>
 <li><a href="https://github.com/dyrehaugen/renv" target="blank">On Github</a></li>
 
@@ -445,8 +446,8 @@ Charles also urged people to listen to the â€œwisdom of indigenous communitiesâ€
           </div>
         </div>
       </div>
-<a href="links.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
-
+<a href="links.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="sitelog.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
