--- a/sitelog.html
+++ b/sitelog.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-18" />
+<meta name="date" content="2023-12-19" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -297,6 +297,8 @@
 <p><strong>Latest Additions</strong></p>
 <p>December 17, 2023 human-niche\
        xu article human temp/precip niche<br />
+December 18, 2023 sustainability\
+       being sustainable is no longer enough -&gt; regenerative<br />
 </p>
 
 
