--- a/sustainability.html
+++ b/sustainability.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-18" />
+<meta name="date" content="2023-12-19" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -294,6 +294,10 @@
             <section class="normal" id="section-">
 <div id="sustainability" class="section level1 hasAnchor" number="3">
 <h1><span class="header-section-number">3</span> Sustainability<a href="sustainability.html#sustainability" class="anchor-section" aria-label="Anchor link to header"></a></h1>
+<blockquote>
+<p>Being sustainable is no longer enough. We need to regenerate forests, train people with green skills, help local communities and indigenous people become more resilient, and more.
+These are improvements in the physical systems around us, leaving them better than we found them</p>
+</blockquote>
 <div id="un-sustainability-goals" class="section level2 hasAnchor" number="3.1">
 <h2><span class="header-section-number">3.1</span> UN Sustainability Goals<a href="sustainability.html#un-sustainability-goals" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><em>Beslik</em></p>
