--- a/mass-extinction.html
+++ b/mass-extinction.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-19" />
+<meta name="date" content="2023-12-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -141,10 +141,11 @@
 <li class="chapter" data-level="11" data-path="mass-extinction.html"><a href="mass-extinction.html"><i class="fa fa-check"></i><b>11</b> Mass Extinction</a>
 <ul>
 <li class="chapter" data-level="11.1" data-path="mass-extinction.html"><a href="mass-extinction.html#plants-and-fungi"><i class="fa fa-check"></i><b>11.1</b> Plants and Fungi</a></li>
-<li class="chapter" data-level="11.2" data-path="mass-extinction.html"><a href="mass-extinction.html#coral-reefs"><i class="fa fa-check"></i><b>11.2</b> Coral Reefs</a></li>
-<li class="chapter" data-level="11.3" data-path="mass-extinction.html"><a href="mass-extinction.html#extinction-rate"><i class="fa fa-check"></i><b>11.3</b> Extinction Rate</a>
+<li class="chapter" data-level="11.2" data-path="mass-extinction.html"><a href="mass-extinction.html#insects"><i class="fa fa-check"></i><b>11.2</b> Insects</a></li>
+<li class="chapter" data-level="11.3" data-path="mass-extinction.html"><a href="mass-extinction.html#coral-reefs"><i class="fa fa-check"></i><b>11.3</b> Coral Reefs</a></li>
+<li class="chapter" data-level="11.4" data-path="mass-extinction.html"><a href="mass-extinction.html#extinction-rate"><i class="fa fa-check"></i><b>11.4</b> Extinction Rate</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="mass-extinction.html"><a href="mass-extinction.html#compared-to-5th-mass-extinction"><i class="fa fa-check"></i><b>11.3.1</b> Compared to 5th Mass Extinction</a></li>
+<li class="chapter" data-level="11.4.1" data-path="mass-extinction.html"><a href="mass-extinction.html#compared-to-5th-mass-extinction"><i class="fa fa-check"></i><b>11.4.1</b> Compared to 5th Mass Extinction</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>12</b> Pollution</a>
@@ -324,8 +325,17 @@ Climate change is having “detrimental” impacts on fungi in different ways wi
 <p>Plants are currently going extinct 500 times faster than before humans existed.</p>
 <p><a href="https://www.carbonbrief.org/kew-report-five-key-extinction-risks-facing-the-worlds-plants-and-fungi/">Carbonbrief (2023) Kew report: Five key extinction risks facing the world’s plants and fungi</a></p>
 </div>
-<div id="coral-reefs" class="section level2 hasAnchor" number="11.2">
-<h2><span class="header-section-number">11.2</span> Coral Reefs<a href="mass-extinction.html#coral-reefs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="insects" class="section level2 hasAnchor" number="11.2">
+<h2><span class="header-section-number">11.2</span> Insects<a href="mass-extinction.html#insects" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<p><em>Klink Abstract</em></p>
+<p>Studies have reported widespread declines in terrestrial insect abundances in recent years but trends in other biodiversity metrics are less clear-cut. Here we examined long-term trends in 923 terrestrial insect assemblages monitored in 106 studies, and found concomitant declines in abundance and species richness. For studies that were resolved to species level (551 sites in 57 studies), we observed a decline in the number of initially abundant species through time, but not in the number of very rare species. At the population level, we found that <em>species that were most abundant at the start of the time series showed the strongest average declines</em> (corrected for regression-to-the-mean effects). Rarer species were, on average, also declining, but these were offset by increases of other species. Our results suggest that <em>the observed decreases in total insect abundance can mostly be explained by widespread declines of formerly abundant species</em>. <strong>This counters the common narrative that biodiversity loss is mostly characterized by declines of rare species.</strong> Although our results suggest that fundamental changes are occurring in insect assemblages, it is important to recognize that they represent only trends from those locations for which sufficient long-term data are available. Nevertheless, given the importance of abundant species in ecosystems, their general declines are likely to have broad repercussions for food webs and ecosystem functioning.</p>
+<p><em>Klink Memo</em></p>
+<p>Often confused, however, is exactly which measures of insect biodiversity are being considered. Biodiversity is not a single metric, but rather a generalized concept that encompasses the numbers of individuals and species, species’ relative abundances (for example, evenness and numbers of rare and common species), as well as the identities of species and their interactions. All of these aspects of biodiversity inform the changes that are occurring to insect biodiversity, and might reveal hitherto-overlooked—but crucial—changes. However, although declines in insect abundance and biomass have been shown in large-scale studies and syntheses, trends in other biodiversity metrics have been less clear. Species richness, for example, has been found to decline along with abundance in some large studies, whereas in other studies, insect richness was reported to be stable</p>
+<p>A better understanding of declines in insect abundance can emerge through the study of multiple (complementary) measures of biodiversity, and, in particular, by examining trends in rare and abundant species. For example, even if overall abundances of terrestrial insects are declining, there are several possible scenarios by which other metrics of biodiversity can concurrently change depending on how species with different relative abundances respond.</p>
+<p><a href="https://www.nature.com/articles/s41586-023-06861-4">Klink (2023) Disproportionate declines of formerly abundant species underlie insect loss</a></p>
+</div>
+<div id="coral-reefs" class="section level2 hasAnchor" number="11.3">
+<h2><span class="header-section-number">11.3</span> Coral Reefs<a href="mass-extinction.html#coral-reefs" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Bad news from the Coral Reefs.
 Bleaching is going on and reefs are not healing between events
 UNEP is reporting on this issue.</p>
@@ -380,10 +390,10 @@ resilience - at a locally relevant scale (one km to 10s of km).</p>
 <a href="/pdf/UNEP_2020_Coral_Reefs_CMIP6.pdf">(pdf)</a></p>
 <p><a href="https://www.cell.com/trends/ecology-evolution/fulltext/S0169-5347(20)30306-2#secst0025">Biological Conservation Issues 2021 Scanning</a></p>
 </div>
-<div id="extinction-rate" class="section level2 hasAnchor" number="11.3">
-<h2><span class="header-section-number">11.3</span> Extinction Rate<a href="mass-extinction.html#extinction-rate" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<div id="compared-to-5th-mass-extinction" class="section level3 hasAnchor" number="11.3.1">
-<h3><span class="header-section-number">11.3.1</span> Compared to 5th Mass Extinction<a href="mass-extinction.html#compared-to-5th-mass-extinction" class="anchor-section" aria-label="Anchor link to header"></a></h3>
+<div id="extinction-rate" class="section level2 hasAnchor" number="11.4">
+<h2><span class="header-section-number">11.4</span> Extinction Rate<a href="mass-extinction.html#extinction-rate" class="anchor-section" aria-label="Anchor link to header"></a></h2>
+<div id="compared-to-5th-mass-extinction" class="section level3 hasAnchor" number="11.4.1">
+<h3><span class="header-section-number">11.4.1</span> Compared to 5th Mass Extinction<a href="mass-extinction.html#compared-to-5th-mass-extinction" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p><em>Neubauer Abstract</em></p>
 <p>The Cretaceous–Paleogene mass extinction event 66 million years ago eradicated three quarters of marine and terrestrial species globally. However, previous studies based on vertebrates suggest that freshwater biota were much less affected. Here we assemble a time series of European freshwater gastropod species occurrences and inferred extinction rates covering the past 200 million years. We find that extinction rates increased by more than one order of magnitude during the Cretaceous–Paleogene mass extinction, which resulted in the extinction of 92.5% of all species. The extinction phase lasted 5.4 million years and was followed by a recovery period of 6.9 million years. However, present extinction rates in European freshwater gastropods are three orders of magnitude higher than even these revised estimates for the Cretaceous–Paleogene mass extinction. Our results indicate that, unless substantial conservation effort is directed to freshwater ecosystems, the present extinction crisis will have a severe impact to freshwater biota for millions of years to come.</p>
 <p><a href="https://www.nature.com/articles/s43247-021-00167-x">Neubauser (2021) Current extinction rate in European freshwater gastropods greatly exceeds that of the late Cretaceous mass extinction</a></p>
