--- a/sitelog.html
+++ b/sitelog.html
@@ -23,7 +23,7 @@
 <meta name="author" content="Dyrehaugen Web Notebook" />
 
 
-<meta name="date" content="2023-12-19" />
+<meta name="date" content="2023-12-24" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -141,10 +141,11 @@
 <li class="chapter" data-level="11" data-path="mass-extinction.html"><a href="mass-extinction.html"><i class="fa fa-check"></i><b>11</b> Mass Extinction</a>
 <ul>
 <li class="chapter" data-level="11.1" data-path="mass-extinction.html"><a href="mass-extinction.html#plants-and-fungi"><i class="fa fa-check"></i><b>11.1</b> Plants and Fungi</a></li>
-<li class="chapter" data-level="11.2" data-path="mass-extinction.html"><a href="mass-extinction.html#coral-reefs"><i class="fa fa-check"></i><b>11.2</b> Coral Reefs</a></li>
-<li class="chapter" data-level="11.3" data-path="mass-extinction.html"><a href="mass-extinction.html#extinction-rate"><i class="fa fa-check"></i><b>11.3</b> Extinction Rate</a>
+<li class="chapter" data-level="11.2" data-path="mass-extinction.html"><a href="mass-extinction.html#insects"><i class="fa fa-check"></i><b>11.2</b> Insects</a></li>
+<li class="chapter" data-level="11.3" data-path="mass-extinction.html"><a href="mass-extinction.html#coral-reefs"><i class="fa fa-check"></i><b>11.3</b> Coral Reefs</a></li>
+<li class="chapter" data-level="11.4" data-path="mass-extinction.html"><a href="mass-extinction.html#extinction-rate"><i class="fa fa-check"></i><b>11.4</b> Extinction Rate</a>
 <ul>
-<li class="chapter" data-level="11.3.1" data-path="mass-extinction.html"><a href="mass-extinction.html#compared-to-5th-mass-extinction"><i class="fa fa-check"></i><b>11.3.1</b> Compared to 5th Mass Extinction</a></li>
+<li class="chapter" data-level="11.4.1" data-path="mass-extinction.html"><a href="mass-extinction.html#compared-to-5th-mass-extinction"><i class="fa fa-check"></i><b>11.4.1</b> Compared to 5th Mass Extinction</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="12" data-path="pollution.html"><a href="pollution.html"><i class="fa fa-check"></i><b>12</b> Pollution</a>
@@ -299,6 +300,8 @@
        xu article human temp/precip niche<br />
 December 18, 2023 sustainability\
        being sustainable is no longer enough -&gt; regenerative<br />
+December 23, 2023 massextinction\
+       insect decline<br />
 </p>
 
 
